--- a/presentacion.tex
+++ b/presentacion.tex
@@ -25,10 +25,10 @@
 
 %\usetheme{default}
 %\usetheme{AnnArbor}
-%\usetheme{Antibes}
+%*\usetheme{Antibes}
 %\usetheme{Bergen}
-%\usetheme{Berkeley}
-%\usetheme{Berlin}
+%*\usetheme{Berkeley}
+\usetheme{Berlin}
 %\usetheme{Boadilla}
 %\usetheme{CambridgeUS}
 %\usetheme{Copenhagen}
@@ -40,7 +40,7 @@
 %\usetheme{Ilmenau}
 %\usetheme{JuanLesPins}
 %\usetheme{Luebeck}
-\usetheme{Madrid}
+%\usetheme{Madrid}
 %\usetheme{Malmoe}
 %\usetheme{Marburg}
 %\usetheme{Montpellier}
