--- a/presentacion.tex
+++ b/presentacion.tex
@@ -236,7 +236,7 @@ Trabajo de Fin de Grado\\
 \end{frame}
 
 \begin{frame}
-\frametitle{Métodos para implementar visibilidad (II)}
+\frametitle{Métodos para implementar visibilidad (II). Gestión directa}
 
 \begin{figure}[H]
 	\centering
@@ -247,7 +247,7 @@ Trabajo de Fin de Grado\\
 \end{frame}
 
 \begin{frame}
-\frametitle{Métodos para implementar visibilidad (III)}
+\frametitle{Métodos para implementar visibilidad (III). Gestión por flujos}
 
 \begin{figure}[H]
 	\centering
@@ -418,7 +418,7 @@ Nos quedamos con \textbf{Kibana} por haber demostrado ser la opción más escala
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Comparativa captura de paquetes (I)}
+\frametitle{Comparativa captura de paquetes (I). libpcap}
 
 \begin{figure}[H]
 	\centering
@@ -429,7 +429,7 @@ Nos quedamos con \textbf{Kibana} por haber demostrado ser la opción más escala
 \end{frame}
 
 \begin{frame}
-\frametitle{Comparativa captura de paquetes (II)}
+\frametitle{Comparativa captura de paquetes (II). pf\_ring}
 
 \begin{figure}[H]
 	\centering
