--- a/presentacion.tex
+++ b/presentacion.tex
@@ -481,6 +481,12 @@ Hemos construido una herramienta que:
 %\bibitem[Smith, 2012]{p1} John Smith (2012)
 %\newblock Title of the publication
 %\newblock \emph{Journal Name} 12(3), 45 -- 678.
+\bibitem{seven} Seven Solutions website (2019)
+\newblock \url{https://sevensols.com/index.php/visibility-network/}
+\bibitem{garland} Garland Technology (2019)
+\newblock \url{https://www.garlandtechnology.com/}
+\bibitem{gigamon} Gigamon (2019)
+\newblock \url{https://www.gigamon.com/products/access-traffic/network-taps.html}
 \end{thebibliography}
 }
 \end{frame}
