--- a/presentacion.tex
+++ b/presentacion.tex
@@ -136,7 +136,7 @@ Trabajo de Fin de Grado\\
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Redes de visibilidad y aplicaciones}
+\frametitle{Redes de visibilidad y aplicaciones (I)}
 \begin{block}{¿Qué son las redes de visibilidad?}
 	Son la infraestructura en una red que permite la monitorización de la misma, con el fin de conocer el estado sobre su rendimiento y de detectar posibles fallos de seguridad.
 \end{block}
@@ -152,7 +152,7 @@ Trabajo de Fin de Grado\\
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Redes de visibilidad y aplicaciones}
+\frametitle{Redes de visibilidad y aplicaciones (II)}
 
 \begin{figure}[H]
 	\centering
@@ -161,6 +161,22 @@ Trabajo de Fin de Grado\\
 \end{figure}
 
 \end{frame}
+
+\begin{frame}
+\frametitle{Redes de visibilidad y aplicaciones (III)}
+
+\begin{itemize}
+\item Monitorización de parámetros
+\item Análisis de rendimiento
+\item Evaluación de la calidad de servicios que dependen de una infraestructura
+\item Mayor escalabilidad en la red, al tener mayor y mejor conocimiento sobre ella
+\item Detección de puntos ciegos
+\item Mayor facilidad para descubrir fallos de seguridad en la misma
+\item Mejorar la eficiencia de los procesos de resolución de problemas en la red
+\end{itemize}
+
+\end{frame}
+
 
 %------------------------------------------------
 
