--- a/presentacion.tex
+++ b/presentacion.tex
@@ -166,6 +166,7 @@ Trabajo de Fin de Grado\\
 \frametitle{Redes de visibilidad y aplicaciones (III)}
 
 \begin{itemize}
+\item Alta repercusión en \textit{telecom}, \textit{finance} y \textit{gaming}
 \item Monitorización de parámetros
 \item Análisis de rendimiento
 \item Evaluación de la calidad de servicios que dependen de una infraestructura
